<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_GrisOscuro"
    android:orientation="vertical"
    tools:context="mx.edu.itl.ctl85360673.logincoloresaapp.LoginActivity"
    android:id="@+id/layoutPrincipal">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/_layMargen"
        android:layout_marginTop="@dimen/_layMargen"
        android:background="@color/_GrisClaro"
        android:padding="15dp"
        android:text="@string/TecLagApps"
        android:textColor="@color/_Blanco"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Apps"
            android:textColor="@color/_Azul"
            android:textSize="@dimen/_titulos" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ParaAndroid"
            android:textColor="@color/_Blanco"
            android:textSize="@dimen/_titulos" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lollipop"
            android:textColor="@color/_GrisClaro"
            android:textSize="@dimen/_titulos" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/_layMargen"
        android:layout_marginTop="20dp"
        android:text="2.0"
        android:textColor="@color/_Rojo"
        android:textSize="@dimen/_titulos" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_layMargen"
        android:background="@color/_Blanco"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textEmailAddress"
        android:textColor="@color/_GrisOscuro"
        android:textSize="@dimen/_titulos" />

    <EditText
        android:id="@+id/edtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_layMargen"
        android:background="@color/_Blanco"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/_GrisOscuro"
        android:textSize="@dimen/_titulos" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/_layMargen"
        android:background="@color/_Azul"
        android:text="@string/Entrar"
        android:textColor="@color/_Blanco"
        android:textSize="@dimen/_botones" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/PuntoCom"
        android:textColor="@color/_Blanco"
        android:textSize="@dimen/_titulos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_altoBarraColores"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/_Rojo"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/_Amarillo"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/_Verde"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/_Azul"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/DerechosReserv"
        android:textColor="@color/_Blanco" />
</LinearLayout>
